Release 1.0
===========

First complete public release

Release 2.0 rc1
===============

Second complete public release mainly fixing design flaws and providing better API. Template language slightly extended.

*Cleaner lexing allowing for better analysis of templates
- Lexer now only does the job of a scanner without using evaluation. Evaluation is done on token when needed. 

*New error reporting using properties mechanism
- We now have i18n error messages that can be formatted with any locale in a lazy style

*More helper functions
- You can now merge multiple lists into a single one allowing to iterate them in parallel using the engine

*Generally more graceful reactions to expressions that might seem inappropriate
- If and foreach now try to make sense of any type of object being passed in as an expression parameter
- Even a string expression tries to spit out any kind of object

*Lots of internal refactoring and bug fixing

*Introduced renderers

*Introduced compiled mode

*Introduced dynamic expressions and a configurable model adaptor

Release 2.0 rc2
===============

* Samples classes stripped from jars

* Added cached interpreted mode that features speedup close to compiled version (switched on as default)


Release 2.0 rc3
===============

* Cleaned caliper tests

* Fixed source release (missing libs and build files)

* Reintroduced Engine.format as a non-static high performance version

* Fixed infinite loop on certain parsing errors

* Suppressed error messages on stderr when executing tests

* Added a real world example/test